# autobiopipe

./: .gitignore  CLAUDE.md  CODEX.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
autobiopipe/: __init__.py  _version.py  ai_explain.py  biology.py  cli.py  config.py  decision.py  detect.py  parser.py  pipeline.py  qc.py  report.py  visualization.py
autobiopipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autobiopipe/ml/: __init__.py
autobiopipe_output/: sample_report.csv  sample_report.json
docs/: ARCHITECTURE.md  CONTRIBUTING.md
examples/: config.toml  config_strict.toml  sample.fasta  sample.fastq
my_results/: sample_report.csv  sample_report.json
real_data/: genbank_J01673.1.fasta
tests/: conftest.py  test_biology.py  test_cli.py  test_decision.py  test_detect.py  test_parser.py  test_pipeline.py  test_qc.py  test_visualization.py
