[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobiopipe"
version = "0.1.0"
description = "Modular bioinformatics QC pipeline"
requires-python = ">=3.9"
dependencies = ["typer>=0.9.0", "rich>=13.0.0", "pydantic>=2.0.0"]

[project.scripts]
autobio = "autobiopipe.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["autobiopipe*"]
