[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autobiopipe"
version = "0.1.0"
description = "Modular, extensible Python CLI for FASTA/FASTQ quality control"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "AutoBioPipe Contributors" }
]
requires-python = ">=3.9"
keywords = [
  "bioinformatics",
  "genomics",
  "fastq",
  "fasta",
  "python",
  "cli",
  "pipeline",
  "sequencing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "matplotlib>=3.8.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
  "reportlab>=4.1.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/example/autobiopipe"
Repository = "https://github.com/example/autobiopipe"
Issues = "https://github.com/example/autobiopipe/issues"

[project.scripts]
autobio = "autobiopipe.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["autobiopipe*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--strict-markers --strict-config --cov=autobiopipe --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["autobiopipe"]

[tool.coverage.report]
fail_under = 90
show_missing = true
